@@ -180,15 +180,15 @@ sub page {
    if(@$t) {
      div id => 'tagops';
       # NOTE: order of these links is hardcoded in JS
-      a href => '#', mt '_vnpage_tags_spoil0';
-      a href => '#', class => 'tsel', mt '_vnpage_tags_spoil1';
+      a href => '#', class => 'tsel', mt '_vnpage_tags_spoil0';
+      a href => '#', mt '_vnpage_tags_spoil1';
       a href => '#', mt '_vnpage_tags_spoil2';
       a href => '#', class => 'sec', mt '_vnpage_tags_summary';
       a href => '#', mt '_vnpage_tags_all';
      end;
      div id => 'vntags';
       for (@$t) {
-        span class => sprintf 'tagspl%.0f %s', $_->{spoiler}, $_->{spoiler} > 1 ? 'hidden' : '';
+        span class => sprintf 'tagspl%.0f %s', $_->{spoiler}, $_->{spoiler} > 0 ? 'hidden' : '';
          a href => "/g$_->{id}", style => sprintf('font-size: %dpx', $_->{rating}*3.5+6), $_->{name};
          b class => 'grayedout', sprintf ' %.1f', $_->{rating};
         end;
